# tako

./: Cargo.toml
examples/: arbitrary_camera_positioning.rs  basic_raytracing.rs  clipping.rs  describing_rendering_scene.rs  filled_triangles.rs  light.rs  lines.rs  parallelization.rs  perspective_projection.rs  shaded_triangles.rs  shadows_and_reflections.rs
src/: camera.rs  canvas.rs  color.rs  lib.rs  light.rs  rasterizer.rs  scene.rs  sphere.rs
