[package]
name = "tako"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
image = "0.24.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "describing_rendering_scene"
path = "examples/describing_rendering_scene.rs"
